--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,7 @@
           .header { 
             grid-area: header;
             width: 20rem;
-            height: 60rem;
+            height: 47rem;
             display: flex;
             flex-direction: column;
             justify-content: start;
@@ -236,7 +236,7 @@
             grid-area: filter;
             background-color: rgb(199, 198, 198);
             width: 115rem;
-            height: 100%;
+            height: 6rem;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -252,37 +252,46 @@
         .main { 
             grid-area: main;
             width: 115rem;
-            height: 52.5rem;
+            height: 41rem;
             justify-content: center;
             align-items: center;
             background-color:aliceblue;
             justify-content: center;
             align-items: center;
         }
-
         .catalogo {
+            display: flex;
+
+
+            /*
             display: grid;
             width: 114rem;
-            grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
             grid-template-rows: repeat(2, 1fr);
             padding-left: 8.5rem;
+            */
         }
 
         .card {
-            width: 13rem;
-            height: 0.8rem;
+            width: rem;
             margin-top: 1rem;
-            margin-left: 8rem;
             margin-bottom:26rem;
             background-color: whitesmoke;
         }
 
+        .card-img-top {
+            width: 19rem;
+        }
+
         .card-body {
             font: 0.8em sans-serif;
+            width: 10rem;
             background-color: WHITE;
         }
+
         .card-text {
             background-color: white;
+            width: 8rem;
         }
         .opciones {
             width: 64rem;
@@ -308,12 +317,14 @@
         .pagination { 
             grid-area: pagination;
             height: 10rem;
-            background-color:aliceblue ;
+            background-color:rgb(59, 151, 231) ;
             justify-content: center;
             align-content: center;
             align-items: center;
             justify-items: center;
-            padding-top: 1.7rem;
+            padding-top: 2.5rem;
+            padding-bottom: 0.5rem;
+            margin-bottom: 2rem;
         }
           
         .footer { 
